--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,11 @@
   <meta name="theme-color" content="#000000" />
   <link rel="icon" href="data:,">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Newsreader:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
@@ -14,8 +19,8 @@
     integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
     crossorigin=""></script>
 
-    <!-- Nav Icons -->
-    <script src="https://kit.fontawesome.com/61b8757a12.js" crossorigin="anonymous"></script>
+  <!-- Nav Icons -->
+  <script src="https://kit.fontawesome.com/61b8757a12.js" crossorigin="anonymous"></script>
 
   <title>React App</title>
 </head>
